@@ -113,7 +113,9 @@ FingerPrintResults::FingerPrintResults() {
   osscan_opentcpport = osscan_closedtcpport = osscan_closedudpport = -1;
   distance = -1;
   distance_guess = -1;
-  memset(FPs, 0, sizeof(FPs));
+  /* We keep FPs holding at least 10 records because Gen1 OS detection
+     doesn't support maxOSTries() */
+  FPs = (FingerPrint **) safe_zalloc(MAX(o.maxOSTries(), 10) * sizeof(FingerPrint *));
   maxTimingRatio = 0;
   numFPs = goodFP = 0;
 }
@@ -127,7 +129,7 @@ FingerPrintResults::~FingerPrintResults() {
     FPs[i] = NULL;
   }
   numFPs = 0;
-
+  free(FPs);
 }
 
 const struct OS_Classification_Results *FingerPrintResults::getOSClassification() {
